// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageButton /> Snapshot should match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c0:hover,
.c0:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

<a
    class="c0"
  >
    50
  </a>
</DocumentFragment>
`;

exports[`<PageButton /> Snapshot should match snapshot with active prop 1`] = `
<DocumentFragment>
  .c0 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c0:hover,
.c0:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

<a
    class="c0"
  >
    10
  </a>
</DocumentFragment>
`;
